src/assets/styles/_base.css
/* ... */
.segmented-progressbar {
	display: flex;
}

.item {
	width: 100%;
	background-color: lightgray;
	margin-right: 2px;
	height: 22px;
}

.item:first-child {
	border-top-left-radius: 11px;
	border-bottom-left-radius: 11px;
}

.item:last-child {
	border-top-right-radius: 11px;
	border-bottom-right-radius: 11px;
}

.pilot-wrapper .bonds-column .bonds {
	display: flex;
	flex-direction: column;
	row-gap: 0.5em;
	max-width: 15em;
	flex-grow: 2;
}

.pilot-wrapper .bonds-column .burdens {
	display: flex;
	flex-direction: column;
	row-gap: 0.5em;
	max-width: 15em;
	flex-grow: 1;
}

.pilot-wrapper .bonds-column {
	display: flex;
	flex-direction: row;
}

.burden-body {
	display: flex;
	flex-direction: row;
}

.burden-header {
	align-self: center;
}

.burdens .burden {
	width: calc(100% / 5.75);
}

.burden-header h1.burden-title {
	font-size: 18px;
	margin: 0%;
	color: var(--text-location);
	font-family: "Titillium Web", cursive;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 0.5px;
}

.burden-header h2.burden-subtitle {
	font-size: 12px;
	margin: 0%;
	line-height: 1.5em;
	color: var(--text-location);
	font-family: "Roboto", sans-serif;
	font-weight: 500;
	text-transform: uppercase;
	letter-spacing: 3px;
}

.burden-header h2.burden-subtitle {
	max-width: 252px;
}

.pilot-wrapper .gear-column .gear-row {
	display: flex;
	flex-direction: row;
}

.gear-row .gear,
.gear-row .weapon,
.gear-row .armor {
	width: 50%;
}

.pilot-wrapper .mech-column {
	border-right: 0px solid transparent;
	column-gap: 2em;
	flex-grow: 0.3;
	cursor: pointer;
	padding: 0.25em;
}

.pilot-wrapper .mech-column .mech-info {
	display: flex;
	flex-direction: column;
	row-gap: 0.5em;
}

.pilot-wrapper .mech-column .manufacturer {
	display: flex;
	flex-direction: row;
	column-gap: 0.5em;
}

.pilot-wrapper .mech-column .manufacturer-icon {
	width: 48px;
	height: 48px;
}

.pilot-wrapper .mech-column .role {
	font-size: 18px;
	font-weight: 700;
	font-family: "Titillium Web", sans-serif;
	line-height: 1.5em;
	letter-spacing: 0.5px;
	text-transform: uppercase;
	color: var(--text-pilot-value);
}

.pilot-wrapper:last-child {
	border-bottom: none;
}

.o-modal>div:nth-child(2) {
	display: flex;
	gap: 5em;
}

.grid-item {
	position: relative;
}

.grid-item .pilot-header-container {
	display: flex;
}

.grid-item div .section-header {
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	height: 52px;
	display: inline-flex;
	gap: 15px;
	padding-left: 16px;
	margin-top: -38px !important;
}

.grid-item div .section-header h2 {
	font-size: 26px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 800;
	text-transform: uppercase;
	letter-spacing: 0.1em;
}

.grid-item .rhombus-back {
	transform: skew(0.785398rad) !important;
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	width: 40px;
	height: 52px;
	display: inline-block;
	position: relative;
	left: -10px;
	top: -38px;
}

.grid-item div.pilot {
	background-color: var(--secondary-color);
	border: 1px solid var(--primary-color);
	margin-top: -38px;
	width: 608px;
	height: 662px;
}

.grid-item div.pilot div.markdown {
	height: 662px;
}

.grid-item.portrait .pilot {
	width: 600px;
}

.grid-item.portrait img.portrait {
	width: 100%;
	height: 100%;
	object-fit: cover;
	object-position: top;
	overflow: clip;
}

.grid-item.portrait .pilot-header-container {
	display: flex;
}

.grid-item.portrait .rhombus-back {
	left: -25px;
}

.pilot-modal {
	position: relative;
}

.pilot-modal .pilot-header-container {
	display: flex;
}
.pilot-modal div .section-header {
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	height: 52px;
	display: inline-flex;
	gap: 15px;
	padding-left: 16px;
	margin-top: -38px !important;
}
.pilot-modal div .section-header h2 {
	font-size: 26px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 800;
	text-transform: uppercase;
	letter-spacing: 0.1em;
}
.pilot-modal .rhombus-back {
	transform: skew(0.785398rad) !important;
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	width: 40px;
	height: 52px;
	display: inline-block;
	position: relative;
	left: -10px;
	top: -38px;
}
.pilot-modal div.pilot {
	background-color: var(--secondary-color);
	border: 1px solid var(--primary-color);
	margin-top: -38px;
	width: 888px;
	height: 662px;
}
.pilot-modal div.pilot div.markdown {
	height: 662px;
}
.pilot-modal.portrait .pilot {
	width: 600px;
}
.pilot-modal.portrait img.portrait {
	width: 100%;
	height: 100%;
	object-fit: cover;
	object-position: top;
	overflow: clip;
}
.pilot-modal.portrait .pilot-header-container {
	display: flex;
}
.pilot-modal.portrait .rhombus-back {
	left: -25px;
}


.mech-modal {
	position: relative;
}

.mech-modal .clipped-medium-backward-bio {
	width: 582px;
	clip-path: polygon(0 0, 530px 0, 582px 100%, 0% 100%);
	-webkit-clip-path: polygon(0 0, 530px 0, 582px 100%, 0% 100%);
}

.mech-modal .mech-header-container {
	display: flex;
}

.mech-modal div .section-header {
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	height: 52px;
	display: inline-flex;
	gap: 15px;
	padding-left: 16px;
	margin-top: -38px !important;
}

.mech-modal div .section-header h2 {
	font-size: 26px;
	margin: 0%;
	align-self: center;
	font-family: "Big Shoulders Display", cursive;
	font-weight: 800;
	text-transform: uppercase;
	letter-spacing: 0.1em;
}

.mech-modal .rhombus-back {
	transform: skew(0.785398rad) !important;
	background-color: var(--primary-color);
	border-color: var(--primary-color);
	width: 40px;
	height: 52px;
	display: inline-block;
	position: relative;
	left: -10px;
	top: -38px;
}

.mech-modal div.mech-gear {
	border-bottom: 1px solid var(--primary-color);
}
/* ... */

